# CMakePro_LifeGame

./: CMakeLists.txt  README.md
CMakePro_CUDA_LifeGame_V2/: README.md
CMakePro_CUDA_LifeGame_V2/CUDA_Kernels/: Cuda_Check.cu  Cuda_Check.cuh
CMakePro_CUDA_LifeGame_V2/EXE/CMakePro_CUDA_LifeGame/: imgui.ini
CMakePro_CUDA_LifeGame_V2/EXE/resources_LifeGame_V2/init_model/: glider.rle  gosper_glider_gun.rle
CMakePro_CUDA_LifeGame_V2/Main_cpp/: CMakePro_cuda.cpp
CMakePro_CUDA_LifeGame_V2/Main_header/: CMakePro_cuda.h  Common.h
CMakePro_CUDA_LifeGame_V2/Model_RLE/: 124p37_synth.rle  lwss.rle
CMakePro_CUDA_LifeGame_V2/resources_LifeGame_V2/shader/: fs_code.frag
CMakePro_CUDA_LifeGame_V2/stb_image_cpp/: stb_image.cpp
LifeGame_V1/resources_gpu_v32/shader/: fs_code.frag
LifeGame_V2/CMakePro_CUDA_LifeGame_V2/: CMakeLists.txt
LifeGame_V2/CMakePro_CUDA_LifeGame_V2/CUDA_Kernels/: Cuda_Check.cu
LifeGame_V2/CMakePro_CUDA_LifeGame_V2/Main_header/: CMakePro_cuda.h  Common.h
LifeGame_V2/CMakePro_CUDA_LifeGame_V2/resources_LifeGame_V2/shader/: fs_code.frag  vs_code.vert
LifeGame_V2/exe/exe/: imgui.ini
